<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurantname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/restNameInput"
        />
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/restaurantaddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/restAddressInput"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/restaurantcuisine"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/restCuisineInput"
        />
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/restaurantrating"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/restRatingInput"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantSubmit" />

</LinearLayout>
